added new h2 heading
added May 2015 h2 heading

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
 <div style="background-color: #f4f4f4; border: 1px solid #ccc; overflow:hidden; margin-bottom: 30px;padding-bottom: 50px; padding: 10px 10px 50px 30px; margin-top:20px">
 
 <h1 style="margin-top:10px; color: #000">Sorry, our website is temporarily unavailable - please try again later</h1>
-
+<h2>May 2015</h2>
 <p>Our website is currently unavailable due to essential maintenance. We are sorry for any inconvenience.</p>
 
 <p>Please use the links below to access essential services.</p>
