Added new h3 heading
Added new h3 heading

--- a/index.html
+++ b/index.html
@@ -614,6 +614,7 @@
 
 <h1 style="margin-top:10px; color: #000">Sorry, our website is temporarily unavailable - please try again later</h1>
 <h2>May 2015</h2>
+<h3>alt page</h3>
 <p>Our website is currently unavailable due to essential maintenance. We are sorry for any inconvenience.</p>
 
 <p>Please use the links below to access essential services.</p>
